@@ -1,0 +1,119 @@
+##########################################################################
+#  
+#  Copyright (c) 2012, Image Engine Design Inc. All rights reserved.
+#  
+#  Redistribution and use in source and binary forms, with or without
+#  modification, are permitted provided that the following conditions are
+#  met:
+#  
+#      * Redistributions of source code must retain the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer.
+#  
+#      * Redistributions in binary form must reproduce the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer in the documentation and/or other materials provided with
+#        the distribution.
+#  
+#      * Neither the name of John Haddon nor the names of
+#        any other contributors to this software may be used to endorse or
+#        promote products derived from this software without specific prior
+#        written permission.
+#  
+#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+#  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+#  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#  
+##########################################################################
+
+import unittest
+
+import IECore
+
+import Gaffer
+
+class SequencePathTest( unittest.TestCase ) :
+	
+	def __dictPath( self ) :
+	
+		dict = {}
+		dict["dir"] = {}
+		for f in IECore.FileSequence( "a.#.exr 1-10" ).fileNames() :
+			dict["dir"][f] = 1
+		for f in IECore.FileSequence( "b.####.tiff 20-200x2" ).fileNames() :
+			dict["dir"][f] = 1
+			
+		return Gaffer.DictPath( dict, "/" )
+	
+	def test( self ) :
+	
+		path = Gaffer.SequencePath( self.__dictPath() )
+		
+		self.failUnless( path.isValid() )
+		self.failUnless( not path.isLeaf() )
+		
+		path.append( "dir" )
+		self.failUnless( path.isValid() )
+		self.failUnless( not path.isLeaf() )
+		
+		path[0] = "oops!"
+		self.failIf( path.isValid() )
+		self.failIf( path.isLeaf() )
+		
+		path[:] = [ "dir" ]
+		children = path.children()
+		for child in children :
+			self.failUnless( isinstance( child, Gaffer.SequencePath ) )
+		
+		self.assertEqual( len( children ), 2 )
+		childrenStrings = [ str( c ) for c in children ]
+		self.failUnless( "/dir/a.#.exr 1-10" in childrenStrings )
+		self.failUnless( "/dir/b.####.tiff 20-200x2" in childrenStrings )
+	
+	def testNonLeafChildren( self ) :
+	
+		path = Gaffer.SequencePath( self.__dictPath() )
+		children = path.children()
+		for child in children :
+			self.failUnless( isinstance( child, Gaffer.SequencePath ) )
+		self.assertEqual( len( children ), 1 )
+		self.assertEqual( str( children[0] ), "/dir" )
+	
+	def testCopy( self ) :
+	
+		path = Gaffer.SequencePath( self.__dictPath() )
+		path.append( "dir" )
+		
+		path2 = path.copy()
+		self.failUnless( isinstance( path2, Gaffer.SequencePath ) )
+
+		self.assertEqual( path[:], path2[:] )		
+		self.failUnless( path.getFilter() is path2.getFilter() )
+	
+		c = [ str( p ) for p in path.children() ]
+		c2 = [ str( p ) for p in path2.children() ]
+	
+		self.assertEqual( c, c2 )
+	
+	def testInfo( self ) :
+	
+		dictPath = self.__dictPath()
+		path = Gaffer.SequencePath( dictPath )
+		
+		self.assertEqual( dictPath.info(), path.info() )
+	
+	def testFilter( self ) :
+	
+		dictPath = self.__dictPath()
+		path = Gaffer.SequencePath( dictPath )
+		
+if __name__ == "__main__":
+	unittest.main()
