@@ -14,6 +14,8 @@
 
 * Added customisable modes to the BrowserEditor. Current modes allow the browsing of either files or ops.
 
+* Added Gaffer.SequencePath class and used it to implement a file sequence browsing mode for the BrowserEditor and a FileSequenceParameterValueWidget.
+
 0.30.0
 ------
 * Fixed problem trying to call QLineEdit.setPlaceholderText within Nuke.
